[users] авторизация пользователя (+ генерация и валидация JWT токена)
