# users/controllers/users_controller.go
@@ -1,7 +1,10 @@
 package controllers
 
 import (
+	"database/sql"
+	"fmt"
 	"net/http"
+	"strconv"
 
 	"github.com/gin-gonic/gin"
 
@@ -46,4 +49,60 @@ func (uc *UsersController) RegisterUser(ctx *gin.Context) {
 	}
 
 	ctx.Status(http.StatusCreated)
+}
+
+// Signin godoc
+// @Summary Вход в систему
+// @Tags users
+// @Accept json
+// @Param user body requests.Signin true "Зарегистрировать пользователя"
+// @Success 200 {object} responses.Token
+// @Failure 400 {object} responses.httpError
+// @Router /signin [post]
+func (uc *UsersController) Signin(ctx *gin.Context) {
+	var req requests.Signin
+	errs, ok := contract.Validate(ctx, &req)
+	if !ok {
+		responses.RespondError(ctx, http.StatusBadRequest, errs)
+		return
+	}
+
+	token, err := uc.service.Login(ctx, req)
+	if err != nil {
+		if errors2.Cause(err) == sql.ErrNoRows {
+			responses.RespondError(ctx, http.StatusUnauthorized, "username or/and password is incorrect")
+		} else {
+			responses.RespondInternalError(ctx, err)
+		}
+		return
+	}
+
+	ctx.JSON(http.StatusOK, responses2.Token{Value: token})
+}
+
+// FetchUser godoc
+// @Summary Запрос пользователя в системе по ID
+// @Tags users
+// @Accept json
+// @Param id path true "ID пользователя"
+// @Success 200 {object} responses.Token
+// @Failure 400 {object} responses.httpError
+// @Router /signin [post]
+func (uc *UsersController) FetchUser(ctx *gin.Context) {
+	id, err := strconv.Atoi(ctx.Param("id"))
+	if err != nil {
+		responses.RespondError(ctx, http.StatusBadRequest, "user ID must be integer")
+		return
+	}
+	user, err := uc.service.FindUser(ctx, id)
+	if err != nil {
+		if errors2.Cause(err) == sql.ErrNoRows {
+			responses.RespondError(ctx, http.StatusNotFound, fmt.Sprintf("user ID=%d is not found", id))
+		} else {
+			responses.RespondInternalError(ctx, err)
+		}
+		return
+	}
+
+	ctx.JSON(200, user)
 }
