# users/docs/swagger.json
@@ -7,7 +7,43 @@
     },
     "basePath": "/",
     "paths": {
-        "/users": {
+        "/signin": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Вход в систему",
+                "parameters": [
+                    {
+                        "description": "Зарегистрировать пользователя",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/requests.Signin"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/responses.TokenResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/responses.httpError"
+                        }
+                    }
+                }
+            }
+        },
+        "/signup": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -23,7 +59,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/requests.RegisterUser"
+                            "$ref": "#/definitions/requests.Signup"
                         }
                     }
                 ],
@@ -40,7 +76,22 @@
         }
     },
     "definitions": {
-        "requests.RegisterUser": {
+        "requests.Signin": {
+            "type": "object",
+            "required": [
+                "password",
+                "username"
+            ],
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "requests.Signup": {
             "type": "object",
             "required": [
                 "password",
@@ -55,6 +106,14 @@
                     "type": "string"
                 },
                 "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "responses.TokenResponse": {
+            "type": "object",
+            "properties": {
+                "token": {
                     "type": "string"
                 }
             }
